layout changes, attendance front end components

--- a/SDMS/Views/Home/Students.cshtml
+++ b/SDMS/Views/Home/Students.cshtml
@@ -7,54 +7,74 @@
 <div class="text-center">
     <h1 class="display-4">Students</h1>
     <br />
-    <table class=" table table-striped table-bordered">
-        <thead>
-            <tr>
-                <th>
-                    Picture
-                </th>
-                <th>
-                    First Name
-                </th>
-                <th>
-                    Last Name
-                </th>
-                <th>
-                    Grade
-                </th>
-                <th>
-                    Actions
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                foreach (var student in Model)
-                {
-                    <tr>
-                        <td>
-                            <div>
-                                <img src="/images/default-student-image.jpg" alt="Profile Picture" class="mini-picture" height="30" width="30"/>
-                            </div>
-                        </td>
-                        <td>
-                            @student.FirstName
-                        </td>
-                        <td>
-                            @student.LastName
-                        </td>
-                        <td>
-                            @student.EnrollmentDate
-                        </td>
-                        <td>
-                            <a class="btn btn-secondary" asp-route-id="@student.Id" asp-action="CreateStudents">Edit Class Grade</a>
-                            <a class="btn btn-danger" asp-route-id="@student.Id" asp-action="DeleteStudent"> 
-                                <i class="bi bi-trash"></i> Delete
-                            </a>
-                        </td>
-                    </tr>
+    <form asp-action="MarkAttendance" method="post">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>
+                        Picture
+                    </th>
+                    <th>
+                        First Name
+                    </th>
+                    <th>
+                        Last Name
+                    </th>
+                    <th>
+                        Grade
+                    </th>
+                    <th>
+                        Actions
+                    </th>
+                    <th>
+                        Attendance
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    foreach (var student in Model)
+                    {
+                        <tr>
+                            <td>
+                                <div>
+                                    <img src="/images/default-student-image.jpg" alt="Profile Picture" class="mini-picture" height="30" width="30" />
+                                </div>
+                            </td>
+                            <td>
+                                @student.FirstName
+                            </td>
+                            <td>
+                                @student.LastName
+                            </td>
+                            <td>
+                                @student.EnrollmentDate
+                            </td>
+                            <td>
+                                <a class="btn btn-secondary" asp-route-id="@student.Id" asp-action="CreateStudents">Edit Grade</a>
+                                <a class="btn btn-danger" asp-route-id="@student.Id" asp-action="DeleteStudent">
+                                    <i class="bi bi-trash"></i> Delete
+                                </a>
+                            </td>
+                            <td>
+                                <input class="attendance-checkbox" type="checkbox" name="attendance" value="@student.Id" />
+                            </td>
+                        </tr>
+                    }
                 }
-            }
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+        <button type="submit" class="btn btn-primary">Submit Attendance</button>
+        <button type="button" class="btn btn-warning" id="clear-checkboxes">Clear All</button>
+    </form>
 </div>
+
+<script>
+    document.getElementById('clear-checkboxes').addEventListener('click', function () {
+        const checkboxes = document.querySelectorAll('.attendance-checkbox');
+
+        checkboxes.forEach(function (checkbox) {
+            checkbox.checked = false;
+        });
+    });
+</script>
