--- a/SDMS/Views/Home/Index.cshtml
+++ b/SDMS/Views/Home/Index.cshtml
@@ -7,5 +7,7 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <a asp-controller="Home" asp-action="Students" class=" btn btn-secondary">View List of Students</a>
     <a asp-controller="Home" asp-action="CreateStudents" class=" btn btn-primary">Create Student Account</a>
+
+    <button class="btn">Please</button>
     
 </div>
